fix(input): placeholder hidden when there is also a label on IE11
Fixes #11668

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -148,7 +148,7 @@ md-input-container {
     opacity: 0;
   }
 
-  &:not( .md-input-has-value ) input:not( :focus ) {
+  &:not( .md-input-has-value ):not( .md-input-has-placeholder ) input:not( :focus ) {
     color: transparent;
   }
   &:not( .md-input-has-value ) input:not( :focus )::-webkit-datetime-edit-ampm-field,
